2012-05-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug when using a local image directory for a file that has not yet been saved (Bug 299130).

2012-04-20  Robby Stephenson  <robby@periapsis.org>

	* Added API data sources for Allocine, ScreenRush, FilmStarts, SensaCine, and Beyazperde.

2012-03-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed bugs in IBS.it data source.

2012-03-14  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Springer Link.

2012-03-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for the Microsoft Academic Search.

2012-02-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug when entering multiple ISBN values in search.
	* Improved Amazon search for US UPC values from non-UPC sites.

2012-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug when using the scanner dialog.
	* Released Tellico 2.3.5.

2011-12-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with merging entries. Entry IDs will never be different
	so don't warn the user (Bug 289346).
	* Fixed bug with Cancel not working in the Entry Merge dialog.

2011-12-17  Robby Stephenson  <robby@periapsis.org>

	* Refactored fetcher tests to check for network access before running
	* Updated Discogs fetcher to use API v2

2011-12-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed importing of multi-line notes from Alexandria (Bug 289022).

2011-11-30  Robby Stephenson  <robby@periapsis.org>

	* Updated fetcher for Allocine.fr.

2011-10-28  Robby Stephenson  <robby@periapsis.org>

	* Added filter rules for dates before and after.

2011-10-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed broken script for searching Dark Horse Comics.

2011-10-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that always showed checkmark for boolean field values (Bug 283444).

2011-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar exporter to include images.
